# reflection-types

./: .gitignore  README.md
editor/: dune-project
editor/_build/: .db  .digest-db  log
editor/_build/default/: editor.dune-package  editor.install
editor/_build/default/src/: main.ml  syntax.ml  terminal.ml  types.ml
editor/_build/default/src/.main.eobjs/: dune__exe.ml-gen  dune__exe__Editor.impl.all-deps  dune__exe__Editor.impl.d  dune__exe__File_ops.impl.d  dune__exe__Gl_proof_checker.impl.d  dune__exe__Gl_syntax.impl.all-deps  dune__exe__Gl_syntax.impl.d  dune__exe__Interpreter_integration.impl.all-deps  dune__exe__Interpreter_integration.impl.d  dune__exe__Lexer.impl.d  dune__exe__Main.impl.all-deps  dune__exe__Main.impl.d  dune__exe__Syntax.impl.all-deps  dune__exe__Syntax.impl.d  dune__exe__Terminal.impl.d
editor/_build/default/src/.main.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Editor.cmi  dune__exe__Editor.cmo  dune__exe__Editor.cmt  dune__exe__File_ops.cmi  dune__exe__File_ops.cmo  dune__exe__File_ops.cmt  dune__exe__Gl_proof_checker.cmi  dune__exe__Gl_proof_checker.cmo  dune__exe__Gl_proof_checker.cmt  dune__exe__Gl_syntax.cmi  dune__exe__Gl_syntax.cmo  dune__exe__Gl_syntax.cmt  (+17 more)
editor/_build/default/src/.merlin-conf/: exe-main
editor/_build/default/src/.utop/: utop.ml-gen
editor/src/: dune  editor.ml  editor_gadts.ml  file_ops.ml  gadt_types.ml  gl_proof_checker.ml  gl_syntax.ml  highlight.ml  interpreter_integration.ml  lexer.ml  practical_gadts.ml
editor/test/: example.func
editor/test/gl_examples/: simple.gl
(+33 files in other folders)
